--- a/Android/auikit/src/main/java/io/agora/auikit/ui/musicplayer/res/layout/aui_musicplayer_controller_dialog_view.xml
+++ b/Android/auikit/src/main/java/io/agora/auikit/ui/musicplayer/res/layout/aui_musicplayer_controller_dialog_view.xml
@@ -54,12 +54,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_in_ear" />
 
-    <com.google.android.material.divider.MaterialDivider
+    <View
         android:layout_width="match_parent"
         android:layout_height="?attr/aui_musicPlayerControllerDialog_dividerHeight"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        app:dividerColor="?attr/aui_musicPlayerControllerDialog_dividerColor"
+        android:background="?attr/aui_musicPlayerControllerDialog_dividerColor"
         app:layout_constraintTop_toBottomOf="@id/tv_in_ear_tips" />
 
     <com.google.android.material.textview.MaterialTextView
@@ -89,11 +89,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_music_vol" />
 
-    <com.google.android.material.divider.MaterialDivider
+    <View
         android:layout_width="match_parent"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        app:dividerColor="?attr/aui_musicPlayerControllerDialog_dividerColor"
+        android:background="?attr/aui_musicPlayerControllerDialog_dividerColor"
         android:layout_height="?attr/aui_musicPlayerControllerDialog_dividerHeight"
         app:layout_constraintTop_toBottomOf="@id/tv_music_vol" />
 
@@ -124,11 +124,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_signal_vol" />
 
-    <com.google.android.material.divider.MaterialDivider
+    <View
         android:layout_width="match_parent"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        app:dividerColor="?attr/aui_musicPlayerControllerDialog_dividerColor"
+        android:background="?attr/aui_musicPlayerControllerDialog_dividerColor"
         android:layout_height="?attr/aui_musicPlayerControllerDialog_dividerHeight"
         app:layout_constraintTop_toBottomOf="@id/tv_signal_vol" />
 
